--- a/ansible/vars/default.yml
+++ b/ansible/vars/default.yml
@@ -1,7 +1,10 @@
 ---
-mysql_root_password: "mysql_root_password"
+mysql_user: "username"
+mysql_root_password: "P@ssw0rd"
+mysql_db_name: "simple_lamp"
 app_user: "denis"
-http_host: "simple_lamp"
-http_conf: "simple_lamp.conf"
+http_host: "simple-lamp"
+http_conf: "simple-lamp"
 http_port: "80"
 disable_default: true
+download_app_link: "https://github.com/qyjohn/simple-lamp/archive/refs/heads/master.zip"
